Добавлена обработка поля с датой, добавлена операция update для user, добавлено логирование

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.jpa.database=POSTGRESQL
 #Скрипт создает таблицы, но не БД, БД нужно создать руками
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+#Логирование
+logging.level.org.springframework.web=ERROR
+logging.level.RestAPI=DEBUG
+#создаст файл app.log по указанному пути
+logging.file=E:/JAVA/Eclipse/eclipse-workspace/SampleRestAPI/app.log
+# паттерн логов для консоли
+logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+# паттерн логов для записи в файл
+logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
